# RGT-Digital-Twin

./: .gitignore  README.md  pyproject.toml
rgt-digital-twin/: config.py  ehr_extraction.py  literature_extraction.py
